TCOMP-807 fixing header on firefox - and ensure we dont mess up all icons

--- a/component-starter-server/src/main/frontend/src/App/App.scss
+++ b/component-starter-server/src/main/frontend/src/App/App.scss
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
 
-  svg:first-child {
+   > svg:first-child {
     flex: 0 0 48px;
     display: block !important;
     height: 0;
